# 2048

./: best_genome  best_genome.pkl  config.txt  main.py  pyproject.toml  requirements.txt
src/: path.py
src/ai/: __init__.py  config.py  evaluation.py  fitness.py  io.py  log.py  train.py  training.py
src/game/: __init__.py  game.py  log.py
src/gui/: __init__.py  log.py  menu.py
src/py2048/: __init__.py  block.py  board.py  color.py  colors.py  config.py  game.py  grid.py  logger.py  utils.py
src/py2048/objects/: __init__.py  board.py  button.py  label.py  score_label.py  sprite.py  tile.py
src/py2048/objects/abc/: __init__.py  clickable_ui_element.py  movable_ui_element.py  ui_element.py
src/py2048/screens/: __init__.py  game.py  header.py  menu.py
src/py2048/screens/elements/: button.py  label.py
src/py2048/utils/: __init__.py  collections.py  enums.py
src/utils/: __init__.py  collections.py  config.py  enums.py  log.py
